--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,21 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "langchain>=0.3.0",
+    "langchain-openai>=0.3.0",
+    "langchain-anthropic>=0.3.0",
+    "langgraph>=0.2.0",
+    "pydantic>=2.0.0",
+    "tree-sitter>=0.21.0",
+    "tree-sitter-language-pack>=0.1.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+]
 
 [project.scripts]
 debt-zero-agent = "debt_zero_agent.cli:main"
