--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "tree-sitter-language-pack>=0.1.0",
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
+    "requests>=2.31.0",
 ]
 
 [project.scripts]
