--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain>=0.3.0",
     "langchain-openai>=0.3.0",
     "langchain-anthropic>=0.3.0",
+    "langchain-google-genai>=2.0.0",
     "langgraph>=0.2.0",
     "pydantic>=2.0.0",
     "tree-sitter>=0.21.0",
